# src/swagger.json
@@ -1,15 +1,14 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "RentalX Documention",
+    "title": "RentX Documention",
     "description": "This is an API Rent",
     "version": "1.0.0",
     "contact": {
       "email": "xarlysouza@hotmail.com"
     }
   },
-  "paths": {
-    
+  "paths": {    
     "/categories": {
       "post": {
         "tags": ["Category"],
@@ -71,6 +70,87 @@
               }
             }
           }
+        }
+      }
+    },
+    "/categories/import": {
+      "post":{
+        "tags": ["Category"],
+        "summary": "Upload new category",
+        "description": "Upload new category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description":"Created"
+          },
+          "500": {
+            "description":"Specification already exists"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Specifications"],
+        "summary": "List all specifications",
+        "description": "List all specifications",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/Specification"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name":{
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
